when the user session requested a shutdown that needs confirmation or a password, don't put the dialog at the start of the next kdm session (and thus reset/disconnect the x server in between), but do it in the current kdm session after the user session exits.

BUG: 104249

svn path=/trunk/KDE/kdebase/workspace/; revision=735053